--- a/website/templates/home.html
+++ b/website/templates/home.html
@@ -1,6 +1,6 @@
 {% extends "base.html" %} {% block title %}Home{% endblock %}
 {% block content%}
-<h1 align="center">Notes</h1>
+<h1 align="center"> {{user.first_name}}'s Notes</h1>
 <ul class="list-group" id="notes">
     {% for note in user.notes %}
     <li class="list-group-item">
